# codeeval

./: LICENSE  README.md
1-fizzbuzz/: fizzbuzz.py
144-digit-statistics/: 10-repeat.txt  Readme  digstat.py  eval.py3  test  testfile.txt
20-lowercase/: lc.sh
4-sumprime/: CMakeLists.txt  codeval.cpp  main.cpp  prime.cpp  prime.hpp  primeTest.cpp  primes.py  readme-cmake.txt  sum.cpp
